--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -6,6 +6,36 @@ services:
     ports:
       - "2181"
     hostname: zookeeper
+    
+  receiver:
+    image: receiver
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
+
+  storage:
+    image: storage
+    ports:
+      - "8090:8090"
+    depends_on:
+      - kafka
+      - db
+
+  processing:
+    image: processing
+    ports:
+      - "8100:8100"
+    network_mode: "host"
+    depends_on:
+      - storage
+
+  audit_log:
+    image: audit_log
+    ports:
+      - "8110:8110"
+    depends_on:
+      - kafka
 
   kafka:
     image: wurstmeister/kafka
