Changes to logging

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,6 +13,10 @@ services:
     image: receiver
     ports:
       - "8080:8080"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/receiver:/config
     depends_on:
       - kafka
 
@@ -20,24 +24,39 @@ services:
     image: storage
     ports:
       - "8090:8090"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/storage:/config
     depends_on:
       - kafka
       - db
+
 
   processing:
     image: processing
     ports:
       - "8100:8100"
     network_mode: "host"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/processing:/config
     depends_on:
       - storage
+
 
   audit_log:
     image: audit_log
     ports:
       - "8110:8110"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/audit_log:/config
     depends_on:
       - kafka
+
 
   dashboard:
     image: dashboard
