Log filename change

--- a/processing/log_conf.yml
+++ b/processing/log_conf.yml
@@ -12,7 +12,7 @@ handlers:
     class: logging.FileHandler
     level: DEBUG
     formatter: simple
-    filename: app8100.log
+    filename: /logs/app_processing.log
 loggers:
   basicLogger:
     level: DEBUG
