--- a/receiver/log_conf.yml
+++ b/receiver/log_conf.yml
@@ -12,7 +12,7 @@ handlers:
     class: logging.FileHandler
     level: DEBUG
     formatter: simple
-    filename: app8080.log
+    filename: /logs/app_receiver.log
 loggers:
   basicLogger:
     level: DEBUG
