--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     volumes:
       - /home/azureuser/config/processing:/config
       - /home/azureuser/logs:/logs
+      - processing-db:/data
     depends_on:
       - storage
 
@@ -110,3 +111,4 @@ services:
 
 volumes:
   my-db:
+  processing-db:
