Adding health service

--- a/receiver/cardapi.yaml
+++ b/receiver/cardapi.yaml
@@ -47,6 +47,13 @@ paths:
           description: Seller rating added successfully
         "400":
           description: Invalid input
+  /health:
+      get:
+        summary: Health check endpoint
+        description: Returns a 200 response if the service is running
+        responses:
+          '200':
+            description: Service is running
 components:
   schemas:
     AddCardDatabase:
