--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     image: receiver
     ports:
       - "8080:8080"
+      - "8120:8120"
     environment:
       - TARGET_ENV=test
     volumes:
@@ -25,6 +26,7 @@ services:
     image: storage
     ports:
       - "8090:8090"
+      - "8120:8120"
     environment:
       - TARGET_ENV=test
     volumes:
@@ -39,6 +41,7 @@ services:
     image: processing
     ports:
       - "8100:8100"
+      - "8120:8120"
     network_mode: "host"
     environment:
       - TARGET_ENV=test
@@ -54,6 +57,7 @@ services:
     image: audit_log
     ports:
       - "8110:8110"
+      - "8120:8120"
     environment:
       - TARGET_ENV=test
     volumes:
@@ -70,6 +74,22 @@ services:
     depends_on:
     - "processing"
     - "audit_log"
+
+  health:
+    image: health
+    ports:
+    - "8120:8120"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/health:/config
+      - /home/azureuser/logs:/logs
+    depends_on:
+      - "processing"
+      - "audit_log"
+      - "storage"
+      - "receiver"
+
 
 
   kafka:
